CRUD para las memorias ram todavia falta

--- a/Austral-Equipos/.vscode/settings.json
+++ b/Austral-Equipos/.vscode/settings.json
@@ -12,5 +12,6 @@
             "database": "equipo",
             "username": "angel"
         }
-    ]
+    ],
+    "liveServer.settings.port": 5501
 }
